test/types/records/ferguson/missing-functions/init-other-type-no-cast.good
init-other-type-no-cast.chpl:26: In function 'main':
init-other-type-no-cast.chpl:27: error: a cast creating 'R' from 'int(64)' is missing
init-other-type-no-cast.chpl:16: note: expected because init= is defined here between these two types
